GCA-36 Test coverage - test for cascade added